<resources>
    <string name="app_name">glorious</string>
    <string name="menu_home">Home</string>
    <string name="skipLogin">Skip</string>
    <string name="app_welcome">Welcome Back!</string>
    <string name="signInText">Sign in to continue to</string>
    <string name="app_name_small">Gloriousplus</string>
    <string name="otp_login">OTP Sign In</string>
    <string name="hint_number">Mobile Number</string>
    <string name="hint_otp">OTP</string>
    <string name="hint_password">Password</string>
    <string name="loginText">Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="text_signUp">Sign Up</string>
    <string name="text_signIn">Sign In</string>
    <string name="hint_name">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_referral_code">Referral Code (Optional)</string>
    <string name="terms_and_conditions">By signing up you are agree to our Terms &amp; Conditions.</string>
    <string name="proceed">Proceed</string>
    <string name="already_have_account">Already have account?</string>
    <string name="registerText">Glad to see you to</string>
    <string name="send">Send</string>
    <string name="enter_mobile_number">Enter Mobile Number \n for OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="category">Category</string>
    <string name="Order_history">Order history</string>
    <string name="profile">Profile</string>
    <string name="my_account">My account</string>
    <string name="phone">Phone number</string>
    <string name="address_book">Address book</string>
    <string name="other_information">Other information</string>
    <string name="share_app">Share the App</string>
    <string name="please_wait">Please wait …</string>
    <string name="your_information">your information</string>
    <string name="action_settings">Settings</string>
    <string name="at_serve" translatable="false">At Serve</string>
    <string name="sign_in_via_otp">Sign In via OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_with_number">Sign in with Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="search_hint">Search</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="invalid_email_formate">Email should be in valid formate</string>
    <string name="change_password">Change Password</string>
    <string name="error_no_internet">"Please check your network connection and try again."</string>
    <string name="error_incorrect_phone_number">"Please check your phone number and try again."</string>
    <string name="error_invalid_credentials">"Please check your credentials and try again."</string>
    <string name="validation_password_must_length_min">"Password should be at least 6 characters"</string>
    <string name="openDrawer" translatable="false" />
    <string name="otp_received">Enter OTP</string>
    <string name="error_no_otp_login">Currently Login Via OTP is in Development, Please Try login using password</string>
    <string name="error_password_not_match">Password do not match</string>
    <string name="order_number">Order Number:</string>
    <string name="order_type">Order Type:</string>
    <string name="no_order_history_available">No Order History Available</string>
    <string name="no_new_order_available">No New Orders Available</string>
    <string name="no_customer_available">No Customer Available</string>
    <string name="no_accepted_order_available">No Accepted Orders Available</string>
    <string name="no_assign_order_available">No Assign Orders Available</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="order">Order</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="no_attandance_report_available">No Attandance Report Available</string>
    <string name="clockin">Clock IN</string>
    <string name="clockout">Clock Out</string>
    <string name="name">Name:</string>
    <string name="lbl_name">Name</string>
    <string name="address">Address:</string>
    <string name="amount">Amount :</string>
    <string name="id">Customer ID :</string>
    <string name="reject_order">Reject Order</string>
    <string name="enter_rejection_reason_please">Enter Rejection Reason Please</string>
    <string name="cancel">Cancel</string>
    <string name="delivered">Delivered</string>
    <string name="delivery">Delivery</string>
    <string name="order_accept">Accept Order</string>
    <string name="contact">Contact:</string>
    <string name="item">Item:</string>
    <string name="by">By :</string>
    <string name="delivery_time">Delivery Time:</string>
    <string name="quantity">Quantity:</string>
    <string name="products_services">products / services</string>
    <string name="validation_required_field">"This is a required field"</string>
    <string name="phone_number_10_digits">Phone Number must be 10 digits</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with_phonenumber">Sign In with Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="lbl_or">Or</string>
    <string name="place_api_key">AIzaSyAl6Kn3B03RcEmC3NHtaR2gbns0fynqjBw</string>
    <string name="confirm_registration">Confirm Your Registration</string>
    <string name="otp_4_digit">Otp must be 4 digit</string>
    <string name="bharat_pay_qr">Bharat Pay QR</string>
    <string name="paytm_qr">Paytm QR</string>
    <string name="search_location">Search Location</string>
    <string name="view">View</string>
    <string name="next">Next</string>
    <string name="reset">Reset</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="adhar_number_12_digits">Adhar Number must be 12 digits</string>
    <string name="total_orders">Total Orders:- %d</string>
    <string name="total_sales">Total Sales:- %s</string>
    <string name="accepted_orders">Accepted Orders:- %d</string>
    <string name="rejected_orders">Rejected Orders:- %d</string>
    <string name="in_progress_orders">In Progress Orders:- %d</string>
    <string name="new_orders">New Orders:- %d</string>
    <string name="delivered_orders">Delivered Orders:- %d</string>
    <string name="in_progress">In Progress</string>
    <string name="product_delivered">Product Delivered</string>
    <string name="payment_link">Payment Link</string>
    <string name="new_order">New Order</string>
    <string name="in_progress_order">In Progress Order</string>
    <string name="accepted_order">Accepted Order</string>
    <string name="no_app_found_open_website">No app found to open website</string>
    <string name="no_app_found_open_dialer">No app found to open dialer</string>
    <string name="to">To</string>
    <string name="product_name">Product Name</string>
    <string name="from">From</string>
    <string name="description">Description</string>
    <string name="mrp">MRP</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="security_charge">Securty Charge</string>
    <string name="min_bottle_order_accept">Minimum Bottle Order Accept</string>
    <string name="selling_price">Selling Price</string>
    <string name="will_you_enable_subscription">Will Your Enable Subscription</string>
    <string name="subscription_price">Subscription Price</string>
    <string name="today_s_order_summary">Today\'s Order Summary</string>
    <string name="lov_item_not_available">Item not available.(apologies for the inconvenience</string>
    <string name="lov_cant_deliver_to_location">Can\'t deliver to the location.( apologies for the inconvenience)</string>
    <string name="any_other_reason">My reason is not mentioned here. (Unavoidable Circumstances)</string>
    <string name="please_select_a_reason">Please select a reason</string>
    <string name="please_select_or_enter_a_reason">Please select or enter a reason</string>
    <string name="no_in_progress_orders_available">No In-Progress Orders Available</string>
    <string name="no_in_assign_orders_available">No In-Assign Orders Available</string>
    <string name="please_enter_otp">Please Enter OTP</string>
    <string name="register_with_atserve">Register with AtServe</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="register">Register</string>
    <string name="please_upload_your_visiting_card">Please upload your visiting card to let us know more about you</string>
    <string name="receive_Boottel">No of Bottle Received?</string>
    <string name="submit_Boottel_Plus">+</string>
    <string name="submit_Boottel_Minus">-</string>
    <string name="start_date">Start Date</string>
    <string name="delivery_person_already_register">Delivery person already register</string>
    <string name="select_your_delivery_location">Select Your Delivery Location</string>
    <string name="search_your_location">Search Your Location</string>
    <string name="permission_calendar">Please grant calendar permission to AtServe.</string>
    <string name="permission_contacts">Please grant calling permission to AtServe.</string>
    <string name="location_alert_message">"We will use your location to show you the nearest vendors available as per your need."</string>
    <string name="label_open_settings">Open Settings</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="general_ok">"OK"</string>
    <string name="imagepicker_parent">VendorApp/files</string>
    <string name="choose_existing_photo">Choose Existing Photo</string>
    <string name="take_new_photo">Take New Photo</string>
    <string name="upload_image">Upload Image</string>
    <string name="save">Save</string>
    <string name="alert_unable_to_save_image">Unable to save image. Please try again!</string>
    <string name="success">Success</string>
    <string name="thank_you_choose_atserve">Thank you for Choosing Atserve for Business. Our Representative will contact you within 24 hours.</string>
    <string name="my_customers">My Customers</string>
    <string name="my_Dps">My DPs</string>
    <string name="alert">Alert</string>
    <string name="turning_off_alert">You are turning off your services. You will not be able to receive any order. Are you sure you want to continue?</string>
    <string name="order_rejected_successfully">Order Rejected Successfully</string>
    <string name="order_accepted_successfully">Order Accepted Successfully</string>
    <string name="order_delivered_successfully">Order Delivered Successfully</string>
    <string name="something_went_wrong">Something went wrong. Please Try Again!</string>
    <string name="not_available">N/A</string>
    <string name="otp_send_successfully">OTP send successfully</string>
    <string name="enter_otp">Enter otp</string>
    <string name="scheduled_count">Scheduled (%d)</string>
    <string name="new_count">New (%d)</string>
    <string name="accepted_count">Accepted (%d)</string>
    <string name="in_progress_count">In Progress (%d)</string>
    <string name="submit">Submit</string>
    <string name="sign_in_with_mobile_number">Sign in with Mobile Number</string>
    <string name="call">Call</string>
    <string name="my_orders">My Orders</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="earnandrefer">Earn and Refer</string>
</resources>