<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.glorious.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.glorious.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_order_history"
        android:name="com.example.glorious.ui.orderhistory.OrderHistoryFragment"
        android:label="@string/Order_history"
        tools:layout="@layout/fragment_order_history" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.glorious.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.example.glorious.wishlist.WishlistFragment"
        android:label="@string/wishlist"
        tools:layout="@layout/fragment_wishlist" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.glorious.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_address_book"
        android:name="com.example.glorious.address.AddressFragment"
        android:label="@string/address_book"
        tools:layout="@layout/fragment_address" />

    <fragment
        android:id="@+id/nav_earn"
        android:name="com.example.glorious.earn.Earn"
        android:label="@string/earnandrefer"
        tools:layout="@layout/fragment_earn" />

</navigation>