<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/skipRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/size20"
        android:layout_marginTop="@dimen/size20"
        android:padding="@dimen/size5"
        android:text="@string/skipLogin"
        android:textColor="@color/stroke_grey"
        android:textSize="@dimen/textsize16" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/skipRegister"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size30"
            android:orientation="vertical">

            <TextView
                android:id="@+id/atserveText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerText"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize30" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size2"
                android:text="@string/app_name_small"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textsize30" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">



                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_name"
                        android:inputType="text"
                        android:textSize="@dimen/textsize14"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_15"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_lname"
                        android:inputType="text"
                        android:textSize="@dimen/textsize14"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_15"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/textsize14"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_15"
                    app:counterEnabled="true"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_number"
                        android:inputType="number|textNoSuggestions"
                        android:textSize="@dimen/textsize14"
                        android:maxLength="10"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_15"
                   app:passwordToggleEnabled="true"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/textsize14"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/referl"                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_referral_code"
                        android:inputType="textCapWords"
                        android:imeOptions="actionDone"
                        android:textSize="@dimen/textsize14" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/t_and_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size20"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/stroke_grey"
                    android:textSize="@dimen/textsize14" />

                <TextView
                    android:id="@+id/text_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50"
                    android:layout_marginTop="@dimen/size20"
                    android:background="@drawable/border_gradient"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/proceed"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size20"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_account"
                        android:textSize="@dimen/textsize14" />

                    <TextView
                        android:id="@+id/sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size2"
                        android:text="@string/text_signIn"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize14" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>